Fix some element placements on mobile devices

--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -20,7 +20,7 @@ body,html{
   min-height: 100%;
   background: no-repeat center image_url('WPbg2.jpg');
   background-size:cover;
-  padding: 3em 1.5em 1.5em 1.5em;
+  padding: 1em 1em 1em 1em;
 
 
 }
